<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:background="#DAB866"
        >
        <net.lucode.hackware.magicindicator.MagicIndicator
            android:id="@+id/magic_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="470px"
            />


        <Button
            android:layout_width="80px"
            android:layout_height="36px"
            android:text="@string/tc"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30px"
            android:background="@drawable/bgcktjj"
            android:textColor="#ffffff"
            android:textSize="18px"
            android:gravity="center"
            android:id="@+id/tc"
            />

        <Button
            android:layout_width="64px"
            android:layout_height="36px"
            android:background="@drawable/bg_tj"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="140px"
            android:textColor="#DAB866"
            android:textSize="18px"
            android:text="@string/tj"
            android:id="@+id/tj"
            />

        <Button
            android:layout_width="100px"
            android:layout_height="36px"
            android:text="@string/cktj"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="234px"
            android:background="@drawable/bg_tj"
            android:textColor="#DAB866"
            android:textSize="18px"
            android:gravity="center"
            android:id="@+id/cktj"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="364px"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/ll_nk"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nk"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:textSize="18px" />

            <View
                android:layout_width="100px"
                android:layout_height="2px"
                android:background="#ffffff"
                android:layout_marginTop="5px"
                android:visibility="gone"
                android:id="@+id/view1"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />
</LinearLayout>