<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
  >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye08"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zz"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye09"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xygw"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye10"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/czzx"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye11"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jyz"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye12"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hhv"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye13"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xsmp"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye14"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xsmp"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye15"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mwdj"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye16"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hcpjp"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye18"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fxk"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye19"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gxdc"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="23dp"
                        android:src="@drawable/shouye20"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gd"
                        android:textColor="#ff333333"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#f5f5f5"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            >
            <com.gangxiang.aiDaiOrder.widght.AutoGallery
                android:id="@+id/autoGallery1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <com.gangxiang.aiDaiOrder.widght.PageGuide
                android:id="@+id/pageGuide1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="7dp"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#f5f5f5"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="13dp"
                >
                <View
                    android:layout_width="4dp"
                    android:layout_height="13dp"
                    android:background="#37393C"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wcf"
                    android:textColor="#ff333333"
                    android:textSize="15sp"
                    android:layout_marginLeft="6dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
